feat: remove lombok
Apparently they don't support Java 23 yet.