@@ -1,8 +1,5 @@
 package me.sunstorm.showmanager.eventsystem;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
 import me.sunstorm.showmanager.eventsystem.events.CancellableEvent;
 import me.sunstorm.showmanager.eventsystem.events.Event;
 import me.sunstorm.showmanager.eventsystem.registry.EventConverter;
@@ -10,6 +7,8 @@ import me.sunstorm.showmanager.eventsystem.registry.EventWrapper;
 import me.sunstorm.showmanager.redis.AbstractMessageHandler;
 import me.sunstorm.showmanager.redis.converter.Converter;
 import org.jetbrains.annotations.NotNull;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Method;
 import java.util.*;
@@ -17,10 +16,10 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
-@Slf4j
 public class EventBus extends AbstractMessageHandler<EventWrapper> {
+    private static final Logger log = LoggerFactory.getLogger(EventBus.class);
+
     private final Map<Class<?>, List<ListenerContainer>> listeners = new HashMap<>();
     private final Predicate<Method> methodPredicate = method -> method.isAnnotationPresent(EventCall.class) && method.getParameterCount() == 1 && Event.class.isAssignableFrom(method.getParameterTypes()[0]);
     private final ExecutorService executor = Executors.newSingleThreadExecutor();
@@ -64,14 +63,14 @@ public class EventBus extends AbstractMessageHandler<EventWrapper> {
 
     public void register(@NotNull Listener listener) {
         log.debug("Registering listener: " + listener.getClass().getSimpleName());
-        for (Method method : Arrays.stream(listener.getClass().getDeclaredMethods()).filter(methodPredicate).collect(Collectors.toList())) {
+        for (Method method : Arrays.stream(listener.getClass().getDeclaredMethods()).filter(methodPredicate).toList()) {
             try {
                 Class<?> eventType = method.getParameterTypes()[0];
                 EventPriority priority = method.getAnnotation(EventCall.class).value();
                 method.setAccessible(true);
                 EventExecutor executor = executorFactory.create(listener, method);
                 listeners.computeIfAbsent(eventType, typeList -> new CopyOnWriteArrayList<>()).add(new ListenerContainer(executor, listener, priority));
-                listeners.get(eventType).sort(Comparator.comparingInt(o -> o.getPriority().getPriority()));
+                listeners.get(eventType).sort(Comparator.comparingInt(o -> o.priority().getPriority()));
                 log.debug("Registering method: " + method.getName() + " type: " + eventType.getSimpleName());
             } catch (InstantiationException | IllegalAccessException e) {
                 log.error("Failed to create executor for '{}' method", method.getName(), e);
@@ -80,7 +79,7 @@ public class EventBus extends AbstractMessageHandler<EventWrapper> {
     }
 
     public void unregister(Listener listener) {
-        listeners.values().forEach(list -> list.removeIf(container -> container.getInstance().equals(listener)));
+        listeners.values().forEach(list -> list.removeIf(container -> container.instance().equals(listener)));
     }
 
     @Override
@@ -101,12 +100,7 @@ public class EventBus extends AbstractMessageHandler<EventWrapper> {
         return new EventConverter();
     }
 
-    @Getter
-    @AllArgsConstructor
-    static class ListenerContainer {
-        private final EventExecutor executor;
-        private final Listener instance;
-        private final EventPriority priority;
+    record ListenerContainer(EventExecutor executor, Listener instance, EventPriority priority) {
 
         public void execute(Event event) {
             executor.execute(event, instance);
